# girp

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yaml  release.yaml
configs/: cliff.toml
docs/dev/: README.md
src/: cli.rs  error.rs  lib.rs  main.rs
tests/: integration.rs
